--- a/src/styles/pages/index.css
+++ b/src/styles/pages/index.css
@@ -96,6 +96,9 @@ h1 {
   width: 100%;
   padding: 66px 121px 58px 121px;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .footer p {
   color: white;
