--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -2,3 +2,4 @@
 @import "../components/navigation.scss";
 @import "../components/banner.scss";
 @import "../components/Footer.scss";
+@import "../components/erreur.scss"
