--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,5 +1,7 @@
 @import "./settings";
 @import "../components/navigation.scss";
 @import "../components/banner.scss";
+@import "../components/aboutBanner.scss";
 @import "../components/Footer.scss";
-@import "../components/erreur.scss"
+@import "../components/erreur.scss";
+@import "../components/card.scss"
