--- a/src/styles/components/erreur.css
+++ b/src/styles/components/erreur.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "font-1";
-  src: url(../assets/fonts/Montserra/Montserrat.ttf);
+  src: url(../../Assets/fonts/Montserrat/Montserrat.ttf);
 }
 * {
   margin: 0;
