--- a/src/styles/pages/_settings.scss
+++ b/src/styles/pages/_settings.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "font-1";
-    src: url(../assets/fonts/Montserra/Montserrat.ttf);
+    src: url(../../Assets/fonts/Montserrat/Montserrat.ttf);
 }
 
 $font-1: "font-1", sans-serif;
@@ -13,7 +13,6 @@ $color-4: #000000;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
 
 body {
