--- a/src/styles/components/banner.scss
+++ b/src/styles/components/banner.scss
@@ -10,10 +10,12 @@
 .title {
     position: absolute;
     z-index: 1;
+    width: 335px;
     font-weight: 700;
     font-size: 24px;
     color: $color-3;
-    margin: 31px 94px 32px 16px;
+    padding: 31px 94px 32px 16px;
+
 }
 
 .imgTitle {
