--- a/src/styles/components/card.css
+++ b/src/styles/components/card.css
@@ -45,7 +45,7 @@ a {
   height: 52px;
   color: #FFFFFF;
   position: relative;
-  margin: 0 20px 0 20px;
+  padding: 0 20px 0 20px;
   top: 70%;
   z-index: 5;
   font-size: 18px;
