--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -27,7 +27,7 @@
         height: 52px;
         color: $color-3;
         position: relative;
-        margin: 0 20px 0 20px;
+        padding: 0 20px 0 20px;
         top: 70%;
         z-index: 5;
         font-size: 18px;
