--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,7 +1,8 @@
 @import "./settings";
 @import "../components/navigation.scss";
 @import "../components/banner.scss";
-@import "../components/aboutBanner.scss";
+// @import "../components/aboutBanner.scss";
 @import "../components/Footer.scss";
 @import "../components/erreur.scss";
-@import "../components/card.scss"
+@import "../components/card.scss";
+@import "../components/collapse.scss"
