--- a/src/styles/components/Footer.css
+++ b/src/styles/components/Footer.css
@@ -3,6 +3,7 @@
   width: 100%;
   padding: 66px 121px 58px 121px;
   margin: 0;
+  margin-top: 27px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,4 +12,13 @@
   color: white;
   font-size: 12px;
   text-align: center;
+  padding-top: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+@media (min-width: 1025px) {
+  .footer p {
+    font-size: 24px;
+  }
 }/*# sourceMappingURL=Footer.css.map */
