--- a/src/styles/components/banner.css
+++ b/src/styles/components/banner.css
@@ -6,6 +6,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  border: 1px solid red;
 }
 
 body {
@@ -21,11 +22,18 @@ a {
   cursor: pointer;
 }
 
+@media (min-width: 1025px) {
+  body {
+    min-width: 1025px;
+    margin: 0;
+    padding: 0;
+  }
+}
 .banner {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 22px;
+  margin: 0 20px 22px 20px;
 }
 
 .title {
@@ -35,15 +43,28 @@ a {
   font-weight: 700;
   font-size: 24px;
   color: #FFFFFF;
-  padding: 31px 94px 32px 16px;
+  padding: 31px 88px 32px 16px;
 }
 
 .imgTitle {
   position: relative;
-  width: 335px;
+  width: 100%;
   height: 111px;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 10px;
   filter: brightness(60%);
+}
+
+@media (min-width: 1025px) {
+  .banner {
+    margin: 0 100px 43px 100px;
+  }
+  .banner .imgTitle {
+    width: 100%;
+  }
+  .banner .title {
+    font-size: 48px;
+    width: 843px;
+  }
 }/*# sourceMappingURL=banner.css.map */
