--- a/src/styles/components/banner.scss
+++ b/src/styles/components/banner.scss
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 22px;
+    margin: 0 20px 22px 20px;
 }
 
 .title {
@@ -14,15 +14,31 @@
     font-weight: 700;
     font-size: 24px;
     color: $color-3;
-    padding: 31px 94px 32px 16px;
+    padding: 31px 88px 32px 16px;
 
 }
 
 .imgTitle {
     position: relative;
-    width: 335px;
+    width: 100%;
     height: 111px;
     object-fit: cover;
     border-radius: 10px;
     filter: brightness(60%);
+}
+
+
+@media (min-width : 1025px) {
+    .banner {
+        margin: 0 100px 43px 100px;
+
+        .imgTitle {
+            width: 100%;
+        }
+
+        .title {
+            font-size: 48px;
+            width: 843px;
+        }
+    }
 }
