--- a/src/styles/components/erreur.css
+++ b/src/styles/components/erreur.css
@@ -6,6 +6,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  border: 1px solid red;
 }
 
 body {
@@ -21,6 +22,13 @@ a {
   cursor: pointer;
 }
 
+@media (min-width: 1025px) {
+  body {
+    min-width: 1025px;
+    margin: 0;
+    padding: 0;
+  }
+}
 .erreur-content {
   margin: 113px 0 113px 0;
   display: flex;
