--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -13,8 +13,22 @@ ul {
     margin-bottom: 27px;
     font-weight: 500;
     font-size: 12px;
+    text-transform: uppercase;
 }
 
 .nav-active {
     border-bottom: 1px solid black;
+}
+
+@media (min-width: 1025px) {
+    .navigation {
+        margin: 45px 100px 50px 100px;
+        font-size: 24px;
+        text-transform: capitalize;
+        justify-content: space-between;
+
+        ul {
+            gap: 57px;
+        }
+    }
 }
