--- a/src/styles/pages/_settings.scss
+++ b/src/styles/pages/_settings.scss
@@ -13,7 +13,7 @@ $color-4: #000000;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 1px solid red;
+
 
 }
 
@@ -31,7 +31,7 @@ a {
     cursor: pointer;
 }
 
-@media (min-width : 1025px) {
+@media (min-width : 1025px) and (max-width : 1440px) {
     body {
         min-width: 1025px;
         margin: 0;
