--- a/src/styles/pages/index.css
+++ b/src/styles/pages/index.css
@@ -6,7 +6,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border: 1px solid red;
 }
 
 body {
@@ -22,7 +21,7 @@ a {
   cursor: pointer;
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 1025px) and (max-width: 1440px) {
   body {
     min-width: 1025px;
     margin: 0;
@@ -51,7 +50,7 @@ ul {
   border-bottom: 1px solid black;
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 1025px) and (max-width: 1440px) {
   .navigation {
     margin: 45px 100px 50px 100px;
     font-size: 24px;
@@ -70,7 +69,6 @@ ul {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border: 1px solid red;
 }
 
 body {
@@ -86,7 +84,7 @@ a {
   cursor: pointer;
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 1025px) and (max-width: 1440px) {
   body {
     min-width: 1025px;
     margin: 0;
@@ -97,7 +95,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 22px;
+  margin: 0 20px 22px 20px;
 }
 
 .title {
@@ -112,7 +110,7 @@ a {
 
 .imgTitle {
   position: relative;
-  width: 335px;
+  width: 100%;
   height: 111px;
   -o-object-fit: cover;
      object-fit: cover;
@@ -164,7 +162,6 @@ a {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border: 1px solid red;
 }
 
 body {
@@ -180,7 +177,7 @@ a {
   cursor: pointer;
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 1025px) and (max-width: 1440px) {
   body {
     min-width: 1025px;
     margin: 0;
@@ -219,7 +216,6 @@ a {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border: 1px solid red;
 }
 
 body {
@@ -235,7 +231,7 @@ a {
   cursor: pointer;
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 1025px) and (max-width: 1440px) {
   body {
     min-width: 1025px;
     margin: 0;
@@ -243,58 +239,65 @@ a {
   }
 }
 .card-content {
-  margin: 20px 0 20px 0;
-  display: flex;
-  flex-direction: column;
+  margin: 20px 20px 20px 20px;
+  display: grid;
+  grid-template-columns: 1fr;
   align-items: center;
-  gap: 20px;
+  grid-gap: 20px;
 }
 .card-content article {
+  position: relative;
   overflow: hidden;
-  width: 335px;
+  width: 100%;
   height: 225px;
   cursor: pointer;
 }
 .card-content img {
-  position: absolute;
-  width: 335px;
+  width: 100%;
   height: 225px;
   border-radius: 10px;
   background: #FF6060;
   -o-object-fit: cover;
      object-fit: cover;
+  position: relative;
 }
 .card-content p {
   height: 52px;
   color: #FFFFFF;
-  position: relative;
+  position: absolute;
   padding: 0 20px 0 20px;
   top: 70%;
-  z-index: 5;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
   line-height: 142.6%;
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 768px) {
   .card-content {
-    padding: 56px 50px 43px 50px;
-    margin: 43px 100px 50px 100px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 50px;
+    grid-template-columns: 1fr 1fr;
   }
   .card-content article {
-    width: 340px;
+    width: 100%;
+    height: 250px;
+  }
+  .card-content img {
+    width: 100%;
+    height: 250px;
+  }
+}
+@media (min-width: 1025px) {
+  .card-content {
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 56px 100px 50px 100px;
+  }
+  .card-content article {
+    width: 100%;
     height: 340px;
   }
   .card-content img {
-    width: 340px;
+    width: 100%;
     height: 340px;
-  }
-  .card-content p {
-    top: 80%;
   }
 }
 @font-face {
@@ -305,7 +308,6 @@ a {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border: 1px solid red;
 }
 
 body {
@@ -321,7 +323,7 @@ a {
   cursor: pointer;
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 1025px) and (max-width: 1440px) {
   body {
     min-width: 1025px;
     margin: 0;
