--- a/src/styles/components/Footer.css
+++ b/src/styles/components/Footer.css
@@ -17,7 +17,7 @@
   padding-right: 10px;
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 1025px) and (max-width: 1440px) {
   .footer p {
     font-size: 24px;
   }
