--- a/src/styles/components/banner.scss
+++ b/src/styles/components/banner.scss
@@ -27,13 +27,20 @@
     filter: brightness(60%);
 }
 
+@media (min-width : 768px) {
+    .title {
+        text-align: center;
+        font-size: 1.5rem;
+        width: 100%;
+    }
+}
 
 @media (min-width : 1025px) {
     .banner {
         margin: 0 100px 43px 100px;
 
         .imgTitle {
-            width: 100%;
+            width: 1240px;
         }
 
         .title {
