--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -1,41 +1,78 @@
 @import "../pages/settings";
 
 .card-content {
-    margin: 20px 0 20px 0;
-    display: flex;
-    flex-direction: column;
+    margin: 20px 20px 20px 20px;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    // gap: 20px;
+    display: grid;
+    grid-template-columns: 1fr;
     align-items: center;
-    gap: 20px;
-
+    grid-gap: 20px;
 
     article {
+        position: relative;
         overflow: hidden;
-        width: 335px;
+        width: 100%;
         height: 225px;
         cursor: pointer;
     }
 
     img {
-        position: absolute;
-        width: 335px;
+        width: 100%;
         height: 225px;
         border-radius: 10px;
         background: $color-1;
         object-fit: cover;
+        position: relative;
     }
 
     p {
         height: 52px;
         color: $color-3;
-        position: relative;
+        position: absolute;
         padding: 0 20px 0 20px;
         top: 70%;
-        z-index: 5;
         font-size: 18px;
         font-style: normal;
         font-weight: 700;
         line-height: 142.6%;
+    }
+}
+
+@media (min-width : 768px) {
+    .card-content {
+        grid-template-columns: 1fr 1fr;
+
+        article {
+            width: 100%;
+            height: 250px;
+        }
+
+        img {
+            width: 100%;
+            height: 250px;
+
+        }
+    }
+}
+
+@media (min-width: 1025px) {
+    .card-content {
+        grid-template-columns: 1fr 1fr 1fr;
+        margin: 56px 100px 50px 100px;
 
 
+        article {
+            width: 100%;
+            height: 340px;
+        }
+
+        img {
+            width: 100%;
+            height: 340px;
+
+        }
     }
 }
