--- a/src/styles/components/navigation.css
+++ b/src/styles/components/navigation.css
@@ -20,6 +20,12 @@ ul {
   border-bottom: 1px solid black;
 }
 
+@media (min-width: 768px) {
+  .navigation {
+    justify-content: space-between;
+    margin: 20px 20px 20px 20px;
+  }
+}
 @media (min-width: 1025px) {
   .navigation {
     margin: 45px 100px 50px 100px;
