--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -44,6 +44,9 @@
 @media (min-width : 768px) {
     .card-content {
         grid-template-columns: 1fr 1fr;
+        background-color: #f6f6f6;
+        padding: 56px 50px 50px 50px;
+        border-radius: 25px;
 
         article {
             width: 100%;
@@ -55,13 +58,17 @@
             height: 250px;
 
         }
+
+        p {
+            top: 80%
+        }
     }
 }
 
 @media (min-width: 1025px) {
     .card-content {
         grid-template-columns: 1fr 1fr 1fr;
-        margin: 56px 100px 50px 100px;
+        margin: 43px 100px 50px 100px;
 
 
         article {
