--- a/src/styles/components/Footer.scss
+++ b/src/styles/components/Footer.scss
@@ -20,7 +20,7 @@
     }
 }
 
-@media (min-width: 1025px) and (max-width : 1440px) {
+@media (min-width: 1025px) {
     .footer {
         p {
             font-size: 24px;
