--- a/src/styles/components/banner.css
+++ b/src/styles/components/banner.css
@@ -32,7 +32,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 20px 22px 20px;
+  margin: 0 20px 0px 20px;
 }
 
 .title {
@@ -40,7 +40,7 @@ a {
   z-index: 1;
   width: 335px;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 1.5rem;
   color: #FFFFFF;
   padding: 31px 88px 32px 16px;
 }
@@ -58,19 +58,23 @@ a {
 @media (min-width: 768px) {
   .title {
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 2.25rem;
     width: 100%;
+  }
+  .imgTitle {
+    height: 168px;
   }
 }
 @media (min-width: 1025px) {
   .banner {
-    margin: 0 100px 43px 100px;
+    margin: 0 100px 0px 100px;
   }
   .banner .imgTitle {
-    width: 1240px;
+    width: 100%;
+    height: 223px;
   }
   .banner .title {
-    font-size: 48px;
+    font-size: 3rem;
     width: 843px;
   }
 }/*# sourceMappingURL=banner.css.map */
