--- a/src/styles/components/banner.scss
+++ b/src/styles/components/banner.scss
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0 20px 22px 20px;
+    margin: 0 20px 0px 20px;
 }
 
 .title {
@@ -12,7 +12,7 @@
     z-index: 1;
     width: 335px;
     font-weight: 700;
-    font-size: 24px;
+    font-size: 1.5rem;
     color: $color-3;
     padding: 31px 88px 32px 16px;
 
@@ -25,26 +25,33 @@
     object-fit: cover;
     border-radius: 10px;
     filter: brightness(60%);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 @media (min-width : 768px) {
     .title {
         text-align: center;
-        font-size: 1.5rem;
+        font-size: 2.25rem;
         width: 100%;
+
+    }
+
+    .imgTitle {
+        height: 168px;
     }
 }
 
 @media (min-width : 1025px) {
     .banner {
-        margin: 0 100px 43px 100px;
+        margin: 0 100px 0px 100px;
 
         .imgTitle {
-            width: 1240px;
+            width: 100%;
+            height: 223px;
         }
 
         .title {
-            font-size: 48px;
+            font-size: 3rem;
             width: 843px;
         }
     }
