--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -10,7 +10,7 @@ ul {
     align-items: center;
     justify-content: space-around;
     padding-top: 20px;
-    margin-bottom: 27px;
+    margin: 0px 20px 27px 20px;
     font-weight: 500;
     font-size: 12px;
     text-transform: uppercase;
