--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -4,4 +4,5 @@
 @import "../components/Footer.scss";
 @import "../components/erreur.scss";
 @import "../components/card.scss";
-@import "../components/collapse.scss"
+@import "../components/collapse.scss";
+@import "../components/fiches.scss";
